--- a/document/book.bib
+++ b/document/book.bib
@@ -401,7 +401,6 @@
   journal = {Annals of the New York Academy of Sciences},
   author = {Schellenberg, E Glenn},
   year = {2017},
-  pages = {17},
   file = {/Users/davidjohnbaker/Zotero/storage/E4MH6RE3/Schellenberg - Music and Nonmusical Abilities.pdf}
 }
 
@@ -1302,8 +1301,8 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   file = {/Users/davidjohnbaker/Zotero/storage/WPLZCZYV/Broadbent - Perception and communication.pdf}
 }
 
-@article{atkinsonHUMANMEMORYPROPOSED1968,
-  title = {{{HUMAN MEMORY}}: {{A PROPOSED SYSTEM AND ITS CONTROL PROCESSES}}!},
+@article{atkinsonHumanMemoryProposed1968,
+  title = {Human {{Memory}}: {{A Proposed System}} and Its {{Control Processes}}},
   language = {en},
   journal = {Human Memory},
   author = {Atkinson, R C and Shiffrin, R M},
@@ -1913,7 +1912,6 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   doi = {10.1177/102986490901300102},
   abstract = {In the first part of the paper a theoretical discussion is presented regarding the fundamental concept of similarity and its relation to cue abstraction and categorisation. It is maintained that similarity is by definition context-dependent and strongly interrelated to cue abstraction and categorisation. Emphasis is given to determining the ``musical surface'' that can act as a musically pertinent lowest level of abstraction on which similarity between musical entities can be measured. Then, each of these concepts is examined in more detail with respect to a number of research studies presented in the recent special issue of Music\ae{} Scienti\ae{} on musical similarity (Discussion Forum 4A, 2007). Views claiming that a geometric piano-roll-like representation is the most appropriate choice for polyphonic pattern matching, or that musical repetition is structurally significant if at least fifty percent of a pattern is equivalent (i.e. if it is more similar than dissimilar), or that ``dramatic disparities'' between musical similarities and corresponding categories can be found in empirical studies, are critically re-examined with a view to clarifying the fundamental concept of similarity.},
   language = {en},
-  number = {1\_suppl},
   journal = {Musicae Scientiae},
   author = {Cambouropoulos, Emilios},
   month = mar,
@@ -2084,7 +2082,7 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   abstract = {During the last decade, it has been argued that (1) music processing involves syntactic representations similar to those observed in language, and (2) that music and language share similar syntactic-like processes and neural resources. This claim is important for understanding the origin of music and language abilities and, furthermore, it has clinical implications. The Western musical system, however, is rooted in psychoacoustic properties of sound, and this is not the case for linguistic syntax. Accordingly, musical syntax processing could be parsimoniously understood as an emergent property of auditory memory rather than a property of abstract processing similar to linguistic processing. To support this view, we simulated numerous empirical studies that investigated the processing of harmonic structures, using a model based on the accumulation of sensory information in auditory memory. The simulations revealed that most of the musical syntax manipulations used with behavioral and neurophysiological methods as well as with developmental and cross-cultural approaches can be accounted for by the auditory memory model. This led us to question whether current research on musical syntax can really be compared with linguistic processing. Our simulation also raises methodological and theoretical challenges to study musical syntax while disentangling the confounded low-level sensory influences. In order to investigate syntactic abilities in music comparable to language, research should preferentially use musical material with structures that circumvent the tonal effect exerted by psychoacoustic properties of sounds.},
   language = {en},
   journal = {Frontiers in Systems Neuroscience},
-  author = {Bigand, Emmanuel and Delb\~A\textcopyright, Charles and {Poulin-Charronnat}, B\~A\textcopyright{}n\~A\textcopyright{}dicte and Leman, Marc and Tillmann, Barbara},
+  author = {Bigand, Emmanuel and Delb\'e, Charles and {Poulin-Charronnat}, B\'en\'edicte and Leman, Marc and Tillmann, Barbara},
   month = jun,
   year = {2014},
   file = {/Users/davidjohnbaker/Zotero/storage/N5PVM3JZ/Bigand et al. - 2014 - Empirical evidence for musical syntax processing .pdf}
@@ -3274,19 +3272,6 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   pages = {2-7}
 }
 
-@article{bakerExaminingMusicalSophistication2018,
-  title = {Examining Musical Sophistication: {{A}} Replication and Theoretical Commentary on the {{Goldsmiths Musical Sophistication Index}}},
-  issn = {1029-8649, 2045-4147},
-  shorttitle = {Examining Musical Sophistication},
-  doi = {10.1177/1029864918811879},
-  language = {en},
-  journal = {Musicae Scientiae},
-  author = {Baker, David John and Ventura, Juan and Calamia, Matthew and Shanahan, Daniel and Elliott, Emily M.},
-  month = nov,
-  year = {2018},
-  pages = {102986491881187}
-}
-
 @article{demorestLostTranslationEnculturation2008,
   title = {Lost in {{Translation}}: {{An Enculturation Effect}} in {{Music Memory Performance}}},
   volume = {25},
@@ -4016,7 +4001,7 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
 }
 
 @phdthesis{thompsonPitchInternalizationStrategies2003,
-  address = {Nebraska},
+  address = {Norman},
   title = {Pitch Internalization Strategies of Professional Musicians},
   school = {University of Oklahoma},
   author = {Thompson, Kathy},
@@ -4291,9 +4276,9 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   keywords = {Philosophy,Psychology,Science}
 }
 
-@inproceedings{shanahanDENSMORECOLLECTIONNATIVE2014,
+@inproceedings{shanahanDensmoreCollectionNative2014,
   address = {San Francisco},
-  title = {{{THE DENSMORE COLLECTION OF NATIVE AMERICAN SONGS}}: {{A NEW CORPUS FOR STUDIES OF EFFECTS OF GEOGRAPHY}}, {{LANGUAGE}}, {{AND SOCIAL FUNCTION ON FOLKSONG}}},
+  title = {The {{Densmore Collection}} of {{Native American Songs}}: {{A New Corpus}} for {{Studies}} of {{Effects}} of {{Geography}}, {{Language}}, and {{Social Function}} on {{Folk Song}}},
   booktitle = {Proceedings of the {{Fourteenth Annual International Conference}} for {{Music Perception}} and {{Cognition}}},
   author = {Shanahan, Daniel and Shanahan, Eva},
   year = {2014}
