--- a/document/index.Rmd
+++ b/document/index.Rmd
@@ -1,15 +1,4 @@
 --- 
-title: "MODELING MELODIC DICTATION"
-subtitle: "David John Baker"
-author: 
-- 'A Dissertation' 
-- 'Submitted to the Graduate Faculty of the Louisiana State University and Agricultural and Mechanical College in partial fulfillment of the requirements for the degree of Doctor of Philosophy'
-- 'in'
-- 'The School of Music'
-- 'by David John Baker'
-- 'B.M., Baldwin Wallace University, 2012'
-- 'MSc., Goldsmiths, University of London, 2015'
-- 'May 2019' 
 date: "`r Sys.Date()`"
 geometry: "left=1.5in, right=1in, top=2.5in, bottom=2.5in"
 fontsize: 12pt
@@ -18,12 +7,31 @@ lot: true
 site: bookdown::bookdown_site
 output: bookdown::gitbook
 documentclass: book
-bibliography: [book.bib, packages.bib]
+bibliography: [book.bib, packages.bib, pkg-refs.bib]
 biblio-style: apalike
 link-citations: yes
 github-repo: davidjohnbaker1/document
 description: "This dissertation models both individual and musical features that contribute to processes involved in melodic dictation."
 ---
+
+\cleardoublepage\newpage
+\chapter{Abstract}
+
+Melodic dictation is a cognitively demanding process that requires students to hear a melody, then without any access to an external reference, transcribe the melody within a limited time frame. 
+Despite its ubiquity in curricula within School of Music settings, exactly how an individual learns a melody is not well understood. 
+This dissertation aims to fill the gap in the literature between aural skills practitioners and music psychologists in order to reach conclusions that can be applied systematically in pedagogical contexts. 
+I accomplish this by synthesizing literature from music theory, music psychology, and music education in order to demonstrate how tools from both cognitive psychology as well as computational musicology can be used to help inform pedagogical practices.
+
+In the first chapter, I discuss factors that  might play a role in a student's ability to take melodic dictation and put forward a taxonomy of factors that are assumed to contribute to an individual’s ability to take melodic dictation. 
+The second chapter of the dissertation investigates individual factors that are theorized to contribute to melodic dictation using a cross-sectional experimental design. 
+The chapter corroborates claims on the importance of understanding individual differences in working memory capacity in research on melodic dictation. 
+The third chapter discusses how aural skills pedagogy can incorporate methodologies from computational musicology in order to inform teaching practice. 
+In my fourth chapter, I introduce the MeloSol corpus, a new collection of 783 digitized melodies encoded in the **kern format. 
+In the fifth chapter, I synthesize the previous research in a melodic dictation experiment to show how using robust statistical methods can be used model melodic dictation. 
+Finally, in my sixth chapter, I introduce a computational, cognitive model of melodic dictation with the goal of helping explain how students improve at melodic dictation. 
+I demonstrate how modeling the cognitive decision process during melodic dictation helps provide a precise framework for pedagogues to understand student’s inner cognition during melodic dictation and can help inform teaching practice. 
+
+\mainmatter 
 
 # Significance of the Study
 
@@ -32,10 +40,10 @@ description: "This dissertation models both individual and musical features that
 All students pursuing a Bachelor's degree in Music from universities accredited by the National Association of Schools of Music must learn to take melodic dictation [@nasmNationalAssociationSchools2019, §VIII.6.B.2.A].
 Melodic dictation is a cognitively demanding process that requires students to hear a melody, then without any access to an external reference, transcribe the melody within a limited time frame.
 As of 2019, there are 643 Schools of Music belonging to National Association of Schools of Music (NASM)^[https://nasm.arts-accredit.org/directory-lists/accredited-institutions/search/?institutionname=&city=&state=&country=&search=true], meaning that thousands of students every year will be expected to learn this challenging task as part of their aural skills education.
-The implicit logic is that as one improves in their ability to take melodic dictation, this practice of critical and active listening develops one's ability to "think in music" [@bestMusicCurriculaFuture1992; @karpinskiAuralSkillsAcquisition2000] and thus become a more competent musician.
+The implicit logic is that as one improves in their ability to take melodic dictation, this practice of critical and active listening develops one's ability to "think in music" [@bestMusicCurriculaFuture1992; @karpinskiAuralSkillsAcquisition2000] and thus become a more competent musician. 
 
 Despite its ubiquity in curricula within School of Music settings, research that explains how people learn to take melodic dictation is limited at best.
-The fields of music theory and cognitive psychology are best positioned to make progress on this question, but often the skills required to be well versed in these subjects do not overlap in formal training, findings related to this question are published in separate journals, and thus the overlapping research is scarce.
+The fields of music theory and cognitive psychology are best positioned to make progress on this question, but often the skills required to be well versed in these subjects do not overlap in formal training, findings related to this question are published in separate journals, and thus research that joins these two fields is scarce.
 This problem is not new and there have been repeated attempts to bridge the gap between practitioners of aural skills and researchers in cognitive psychology [@butlerBridgesUnbuiltComparing1993; @davidbutlerWhyGulfMusic1997a; @klonoskiImprovingDictationAuralSkills2006;@klonoskiPerceptualLearningHierarchy2000; @pembrookSendHelpAural1990;@karpinskiAuralSkillsAcquisition2000].
 Literature from music theory has established conceptual frameworks regarding aural skills [@karpinskiAuralSkillsAcquisition2000], cognitive psychology literature has explored factors that might contribute to melodic perception [@dowlingExpectancyAttentionMelody1990; @dowlingScaleContourTwo1978; @dowlingTonalStrengthMelody1991; @halpernMemoryMelodies2010], and applied literature from the field of music education [@buonviriEffectsTwoListening2017; @buonviriMelodicDictationInstruction2015; @paneyEffectDirectingAttention2016] has investigated how people learn melodies in more ecological settings.
 
@@ -69,7 +77,7 @@ I show how this hypothesis can be applied in pedagogical settings to create a mo
 
 In my fourth chapter, I introduce a novel corpus of 783 digitized melodies encoded in the ```**kern```
 format [@huronHumdrumToolkitReference1994].
-This chapter provides a rationale for the introduction of a new corpus in the broader context of computational musicology, contains a small corpus analysis in order to contextualize the new _MeloSol_ corpus, and ends with a brief commentary regarding ontological and epistomological assumptions in music corpus research.
+This chapter provides a rationale for the introduction of a new corpus in the broader context of computational musicology, contains a small corpus analysis in order to contextualize the new _MeloSol_ corpus, and ends with a brief commentary regarding ontological and epistemological assumptions in music corpus research.
 This dataset serves as a resource for future researchers in music, psychology, and the digital humanities. 
 
 In the fifth chapter, I synthesize the previous research in a melodic dictation experiment. 
